# 5082-assignment-8

./: .env.example  .gitignore  README.md  deep-learning-rag-interview-prep-agent-ksriramya.pub  pyproject.toml
data/chroma_db/: chroma.sqlite3
data/corpus/: ann_intermediate.md  cnn_intermediate.md  rnn_intermediate.md
docs/: architecture.md  checklist.md
examples/: sample_chunk.json
src/rag_agent/: config.py
src/rag_agent/agent/: graph.py  nodes.py  prompts.py  state.py
src/rag_agent/corpus/: chunker.py
src/rag_agent/ui/: app.py
src/rag_agent/vectorstore/: store.py
tests/: test_vectorstore.py
